@@ -98,6 +98,8 @@ public abstract class KarafMinimalMonitoredTestSupport {
                 new VMOption("--add-opens"),
                 new VMOption("java.base/java.util=ALL-UNNAMED"),
                 new VMOption("--add-opens"),
+                new VMOption("java.base/sun.nio.ch=ALL-UNNAMED"),
+                new VMOption("--add-opens"),
                 new VMOption("java.naming/javax.naming.spi=ALL-UNNAMED"),
                 new VMOption("--add-opens"),
                 new VMOption("java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED"),
